[gd_scene load_steps=5 format=3 uid="uid://r50un5br5e4w"]

[ext_resource type="Theme" uid="uid://ccbn336iigwja" path="res://barkley2/themes/utility_station.tres" id="1_rtblj"]
[ext_resource type="Script" uid="uid://c6nh8273almss" path="res://barkley2/scenes/_utilityStation/confirmation_box.gd" id="2_1ooco"]
[ext_resource type="FontFile" uid="uid://bmt3s8i84e3xl" path="res://barkley2/resources/fonts/fn1.tres" id="3_2nvl6"]

[sub_resource type="LabelSettings" id="LabelSettings_leqoh"]
line_spacing = 0.0
font = ExtResource("3_2nvl6")

[node name="confirmation_box" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rtblj")
script = ExtResource("2_1ooco")
metadata/_custom_type_script = "uid://eir54p1frfp7"

[node name="bg" type="ColorRect" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
color = Color(0, 0, 0, 0.9)
script = null

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(250, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="confirmation_dialog" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 7.0
offset_right = 248.0
offset_bottom = 67.0
text = "Placeholder Test Placeholder Test Placeholder Test Placeholder Test"
label_settings = SubResource("LabelSettings_leqoh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="yes_btn" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Yes"

[node name="no_btn" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "No"

[connection signal="pressed" from="Panel/HBoxContainer/yes_btn" to="." method="_on_yes_btn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/no_btn" to="." method="_on_no_btn_pressed"]
